pyproject correction to link to github

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,8 +5,8 @@ description = "Modular interface for controlling the Merkury Innovations LED Mat
 authors = ["scooglat <scooglat@gmail.com>"] # Use a real email if you plan to publish
 license = "MIT" # Common, permissive license
 readme = "README.md"
-# homepage = "https://github.com/scooglat/my-led-display-package" # Optional: your GitHub link
-# repository = "https://github.com/scooglat/my-led-display-package" # Optional: your GitHub link
+homepage = "https://github.com/the-sluggiest-cat/mi-led-interface/tree/main?tab=readme-ov-file"
+repository = "https://github.com/the-sluggiest-cat/mi-led-interface/tree/main?tab=readme-ov-file"
 
 # Keywords help people find your package on PyPI
 keywords = ["ble", "bluetooth", "led", "matrix", "hardware"] 
